<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background_register"
    tools:context=".LoginActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_intro"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:textColor="@color/darkblue"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_app"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:textColor="@color/darkblue"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/darkblue"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/darkblue"
                android:layout_marginTop="10dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/darkblue"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext">

                <EditText
                    android:id="@+id/username"
                    android:layout_marginStart="-7dp"
                    android:layout_toEndOf="@+id/username_icon"
                    android:hint="@string/prompt_email"
                    android:autofillHints="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/black"
                    android:background="@null"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    tools:ignore="VisualLintTextFieldSize" />

                <ImageView
                    android:padding="3dp"
                    android:layout_margin="6dp"
                    android:id="@+id/username_icon"
                    android:src="@drawable/user"
                    android:contentDescription="@string/username_icon"
                    android:layout_width="35dp"
                    android:layout_height="35dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edittext">

                <EditText
                    android:id="@+id/password"
                    android:layout_marginStart="-7dp"
                    android:layout_toEndOf="@+id/password_icon"
                    android:autofillHints="@string/prompt_password"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/black"
                    android:background="@null"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    tools:ignore="VisualLintTextFieldSize" />

                <ImageView
                    android:id="@+id/password_icon"
                    android:padding="3dp"
                    android:layout_margin="6dp"
                    android:src="@drawable/padlock"
                    android:contentDescription="@string/padlock_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />

            </RelativeLayout>

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/darkblue"
                android:text="@string/action_sign_in_short"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewHere"
                android:text="@string/no_account"
                android:layout_gravity="center"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/darkblue"
                android:textSize="14sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>