<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="data"
            type="com.example.info_5126_mobile_dev_project.APIFormat" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background3"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageViewBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="onClickBack"
            android:layout_margin="15dp"
            android:src="@drawable/back"
            android:contentDescription="@string/back_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewAbout"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="onClickAbout"
            android:layout_margin="15dp"
            android:src="@drawable/about1"
            android:contentDescription="@string/about_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainerView"
            android:name="com.example.info_5126_mobile_dev_project.UserInputFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout="@layout/fragment_user_input" />



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="1dp"
            android:clickable="true"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkblue"
            android:onClick="onClickButton"
            android:text="@string/view_Reading_List"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Title_Name_Choose"
            android:textColor="@color/white"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="18dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/View_All_Data"
            android:textSize="24sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView" />

        <!--        <Button-->
<!--            android:id="@+id/save_data_button"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:backgroundTint="@color/darkblue"-->
<!--            android:text="@string/save_data"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent" />-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>